# clearsync

./: .gitignore  Makefile.am  Makefile.in  README  README.md  clearsync.spec  clearsync.spec.in  config.h.in  configure  configure.ac  csconf.cpp  csevent.cpp  cslog.cpp  csmain.cpp  csmain.h  csnetlink.cpp  csplugin.cpp  csselect.cpp  cssocket.cpp  csthread.cpp  cstimer.cpp  csutil.cpp
etc/: clearsync.conf.in
include/clearsync/: csconf.h  csevent.h  csexception.h  cslog.h  csnetlink.h  csplugin.h  csselect.h  cssocket.h  csthread.h  cstimer.h  csutil.h
plugin/: Makefile.am  configure.ac  csplugin-example.conf  csplugin-example.cpp  csplugin-example.spec.in  mkplugin.sh
sysconf/: clearsync.service.in  clearsync.tmp
